--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,33 @@
 @import "tailwindcss";
 
-.login{
-    background-image:url('./assets/Hero.jpg');
-    background-repeat: no-repeat;
-    background-size:cover;
+.login {
+  background-image: url('./assets/Hero.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@keyframes typing {
+  0% {
+    width: 0ch;
+  }
+  50% {
+    width: 20ch;
+  }
+  100% {
+    width: 0ch;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.animate-typing {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid white;
+  animation: typing 6s steps(20, end) infinite, blink 0.5s step-end infinite;
 }
